--- a/css/main.css
+++ b/css/main.css
@@ -205,24 +205,22 @@ body {
   position: relative;
   display: flex;
   align-items: center;
-  justify-content: center;
   flex-direction: column;
   width: 100%;
-  height: 100vh;
+  height: 120vh;
   background-color: #79ac78;
 }
 
 .fade {
   width: 50%;
-  box-shadow: 0 0 100px 5px #000; /* Czarny cień */
+  box-shadow: 0 0 50px 5px #000; /* Czarny cień */
 }
 
 img {
   height: 61vh;
-  box-shadow: 0 0 100px 5px #000; /* Czarny cień */
+  box-shadow: 0 0 50px 5px #000; /* Czarny cień */
 }
 
-/* Stylowanie przycisków "Previous" i "Next" */
 .slick-prev,
 .slick-next {
   font-size: 24px;
@@ -251,10 +249,54 @@ img {
   right: -20px;
 }
 
-/* Stylowanie przycisków "Previous" i "Next" po najechaniu myszą */
 .slick-prev:hover,
 .slick-next:hover {
   background-color: rgba(0, 0, 0, 0.8);
+}
+
+.contact {
+  position: relative;
+  display: flex;
+  height: 150vh;
+}
+.contact .contact-info-box {
+  display: flex;
+  width: 80%;
+  flex-direction: row;
+}
+.contact .contact-info-box .contact-p {
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+  padding: 20px;
+  color: #fff;
+  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+}
+.contact .contact-info-box .contact-p p {
+  margin: 20px;
+}
+.contact .contact-info-box .map {
+  width: auto;
+  height: auto;
+  margin-left: 30px;
+  border: 3px solid black;
+  box-shadow: 0 0 50px 5px #000; /* Czarny cień */
+}
+.contact .contact-info-box .buttons-contact {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 30px;
+}
+.contact .contact-info-box .buttons-contact button {
+  width: 360px;
+  height: 60px;
+  box-shadow: 0 0 50px 5px #fff; /* Czarny cień */
+  background-color: rgba(0, 0, 0, 0.3);
+  color: #fff;
+}
+.contact .contact-info-box i {
+  margin-right: 15px;
 }
 
 .custom-shape-divider-bottom-1696514304 {
@@ -300,6 +342,26 @@ img {
   fill: #79ac78;
 }
 
+.custom-shape-divider-bottom-1696626052 {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+}
+
+.custom-shape-divider-bottom-1696626052 svg {
+  position: relative;
+  display: block;
+  width: calc(100% + 1.3px);
+  height: 265px;
+}
+
+.custom-shape-divider-bottom-1696626052 .shape-fill {
+  fill: #618264;
+}
+
 /* Media queries dla urządzeń o szerokości mniejszej niż 768px (telefony komórkowe i tablety w trybie portrait) */
 @media (max-width: 767px) {
   .nav {
@@ -311,7 +373,6 @@ img {
   }
   .nav .link {
     display: none;
-    transition: display 0.5s;
   }
   .nav .navbar-toggler {
     left: -10px;
