--- a/scss/main.scss
+++ b/scss/main.scss
@@ -150,7 +150,7 @@ body {
 	}
 }
 
-.show{
+.show {
 	display: block;
 }
 
@@ -220,23 +220,22 @@ body {
 	position: relative;
 	display: flex;
 	align-items: center;
-	justify-content: center;
 	flex-direction: column;
 	width: 100%;
-	height: 100vh;
+	height: 120vh;
 	background-color: #79ac78;
 }
 
 .fade {
 	width: 50%;
-	box-shadow: 0 0 100px 5px #000; /* Czarny cień */
+	box-shadow: 0 0 50px 5px #000; /* Czarny cień */
 }
 img {
 	height: 61vh;
-	box-shadow: 0 0 100px 5px #000; /* Czarny cień */
+	box-shadow: 0 0 50px 5px #000; /* Czarny cień */
 }
 
-/* Stylowanie przycisków "Previous" i "Next" */
+//SLICK PRZYCISKI
 .slick-prev,
 .slick-next {
 	font-size: 24px;
@@ -265,11 +264,62 @@ img {
 	right: -20px;
 }
 
-/* Stylowanie przycisków "Previous" i "Next" po najechaniu myszą */
 .slick-prev:hover,
 .slick-next:hover {
 	background-color: rgba(0, 0, 0, 0.8);
 }
+
+//Kontakt
+
+.contact {
+	position: relative;
+	display: flex;
+	height: 150vh;
+
+	.contact-info-box {
+		display: flex;
+		width: 80%;
+		flex-direction: row;
+		.contact-p {
+			display: flex;
+			justify-content: flex-start;
+			flex-direction: column;
+			padding: 20px;
+			color: #fff;
+			text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+			p {
+				margin: 20px;
+			}
+		}
+		.map {
+			width: auto;
+			height: auto;
+			margin-left: 30px;
+			border: 3px solid black;
+			box-shadow: 0 0 50px 5px #000; /* Czarny cień */
+		}
+
+		.buttons-contact {
+			display: flex;
+			align-items: center;
+			justify-content: flex-start;
+			padding: 30px;
+
+			button {
+				width: 360px;
+				height: 60px;
+				box-shadow: 0 0 50px 5px #fff; /* Czarny cień */
+				background-color: rgba(0, 0, 0, 0.3);
+				color: #fff;
+			}
+		}
+
+		i{
+			margin-right: 15px;
+		}
+	}
+}
+
 //CURVES
 
 .custom-shape-divider-bottom-1696514304 {
@@ -313,6 +363,25 @@ img {
 .custom-shape-divider-bottom-1696518259 .shape-fill {
 	fill: #79ac78;
 }
+.custom-shape-divider-bottom-1696626052 {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	overflow: hidden;
+	line-height: 0;
+}
+
+.custom-shape-divider-bottom-1696626052 svg {
+	position: relative;
+	display: block;
+	width: calc(100% + 1.3px);
+	height: 265px;
+}
+
+.custom-shape-divider-bottom-1696626052 .shape-fill {
+	fill: #618264;
+}
 
 /* Media queries dla urządzeń o szerokości mniejszej niż 768px (telefony komórkowe i tablety w trybie portrait) */
 @media (max-width: 767px) {
@@ -322,13 +391,11 @@ img {
 		text-align: center;
 		background-color: rgba(0, 0, 0, 0.7);
 		height: auto; /* Dodajemy wysokość automatyczną dla paska nawigacji */
-		
-		.link{
+
+		.link {
 			display: none;
-			transition: display .5s;
 		}
 
-		
 		.navbar-toggler {
 			left: -10px;
 			margin-top: 30px;
@@ -337,11 +404,10 @@ img {
 			opacity: 1;
 			z-index: 10000;
 		}
-		.show{
+		.show {
 			display: block;
 		}
 	}
-	
 
 	.nav a {
 		padding: 1rem;
@@ -466,5 +532,3 @@ img {
 		}
 	}
 }
-
-
