--- a/scss/main.scss
+++ b/scss/main.scss
@@ -154,10 +154,52 @@ body {
 	display: block;
 }
 
+//O NAS
+
+.about-us {
+	position: relative;
+	bottom: -50px;
+	height: 150vh;
+	background-color: #618264;
+	color: #fff;
+	text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+	text-align: justify;
+	.text-about-us {
+		margin-inline: 100px;
+
+		p {
+			margin-bottom: 30px;
+		}
+	}
+	h3 {
+		margin-top: 100px;
+		margin-bottom: 50px;
+	}
+	.offer {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-direction: row;
+		text-align: center;
+
+		p {
+			margin-top: 60px;
+			margin-inline: 30px;
+
+			i {
+				font-size: 30px;
+				text-shadow: 12px 12px 14px rgba(0, 0, 0, 0.5);
+			}
+		}
+	}
+}
+
+//POKOJE
 .rooms {
 	position: relative;
 	margin-top: 3em;
-	height: 200vh;
+	height: 220vh;
+	background-color: #79ac78;
 	.rooms-block {
 		// position: relative;
 		display: flex;
@@ -199,7 +241,8 @@ body {
 	}
 	span {
 		font-weight: bold;
-		color: #79ac78;
+		font-size: 25px;
+		color: #fff;
 	}
 	.div-text {
 		display: flex;
@@ -210,9 +253,10 @@ body {
 	}
 }
 .title {
-	margin-bottom: 3rem;
-	font-size: 4em;
-	color: #fff;
+	margin-top: 5rem;
+	margin-bottom: 5rem;
+	font-size: 4rem;
+	color: #b0d9b1;
 	text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
@@ -222,12 +266,11 @@ body {
 	align-items: center;
 	flex-direction: column;
 	width: 100%;
-	height: 120vh;
-	background-color: #79ac78;
+	height: 140vh;
 }
 
 .fade {
-	width: 50%;
+	width: 40%;
 	box-shadow: 0 0 50px 5px #000; /* Czarny cień */
 }
 img {
@@ -273,8 +316,8 @@ img {
 
 .contact {
 	position: relative;
-	display: flex;
-	height: 150vh;
+	height: 120vh;
+	background-color: #79ac78;
 
 	.contact-info-box {
 		display: flex;
@@ -300,10 +343,11 @@ img {
 		}
 
 		.buttons-contact {
+			position: relative;
 			display: flex;
 			align-items: center;
 			justify-content: flex-start;
-			padding: 30px;	
+			padding: 30px;
 
 			button {
 				width: 360px;
@@ -314,13 +358,30 @@ img {
 				border: 1px solid #009fe3;
 				background-color: #003580;
 				color: #fff;
+				cursor: pointer;
 			}
 		}
 
-		i{
+		i {
 			margin-right: 15px;
 			color: #009fe3;
 		}
+	}
+}
+
+//FOOTER
+
+footer {
+	display: flex;
+	align-items: flex-end;
+	justify-content: center;
+	text-align: center;
+	margin-left: 30px;
+	margin-bottom: 15px;
+	font-size: 12px;
+	height: 5vh;
+	span {
+		font-weight: bold;
 	}
 }
 
@@ -365,7 +426,7 @@ img {
 }
 
 .custom-shape-divider-bottom-1696518259 .shape-fill {
-	fill: #79ac78;
+	fill: #618264;
 }
 .custom-shape-divider-bottom-1696626052 {
 	position: absolute;
@@ -384,6 +445,48 @@ img {
 }
 
 .custom-shape-divider-bottom-1696626052 .shape-fill {
+	fill: #79ac78;
+}
+
+.custom-shape-divider-bottom-1696684256 {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	overflow: hidden;
+	line-height: 0;
+	transform: rotate(180deg);
+}
+
+.custom-shape-divider-bottom-1696684256 svg {
+	position: relative;
+	display: block;
+	width: calc(128% + 1.3px);
+	height: 185px;
+}
+
+.custom-shape-divider-bottom-1696684256 .shape-fill {
+	fill: #79ac78;
+}
+
+.custom-shape-divider-bottom-1696684842 {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	overflow: hidden;
+	line-height: 0;
+	transform: rotate(180deg);
+}
+
+.custom-shape-divider-bottom-1696684842 svg {
+	position: relative;
+	display: block;
+	width: calc(112% + 1.3px);
+	height: 191px;
+}
+
+.custom-shape-divider-bottom-1696684842 .shape-fill {
 	fill: #618264;
 }
 
@@ -475,7 +578,7 @@ img {
 	}
 
 	.fade {
-		width: 100%;
+		width: 90%;
 		img {
 			height: 215px;
 		}
@@ -487,6 +590,46 @@ img {
 		width: 40px;
 		height: 40px;
 	}
+
+
+.about-us {
+height: 250vh;
+	.text-about-us {
+		margin-inline: 20px;
+
+		p {
+			margin-bottom: 30px;
+		}
+	}
+	h3 {
+		display: none;
+	}
+	.offer {
+		display: none;
+	}
+}
+
+.contact {
+	.contact-info-box {
+		.map {
+			display: none;
+		}
+		.buttons-contact {
+			button {
+				width: 200px;
+			}
+		}
+		i {
+			margin-right: 15px;
+			color: #009fe3;
+		}
+	}
+}
+footer{
+	height: 20vh;
+	font-size: 15px;
+
+}
 }
 
 @media (min-width: 768px) and (max-width: 1024px) {
@@ -494,9 +637,14 @@ img {
 		display: flex;
 		flex-direction: row;
 		height: 100px;
+
+		a{
+			margin: 1.3rem;
+			font-size: 20px;
+		}
 	}
 	.fade {
-		width: 100%;
+		width: 90%;
 		img {
 			height: 50vh;
 		}
@@ -525,8 +673,12 @@ img {
 
 		.text-rooms-small {
 			width: 100%;
-			font-size: 20px;
+			font-size: 30px;
 			margin-bottom: 30px;
+
+			span{
+				font-size: 35px;
+			}
 		}
 
 		img {
@@ -534,5 +686,53 @@ img {
 			height: auto;
 			margin-bottom: 30px;
 		}
+
 	}
+
+	.about-us {
+		height: 250vh;
+		font-size: 30px;
+	
+			.text-about-us {
+				margin-inline: 50px;
+		
+				p {
+					margin-bottom: 30px;
+				}
+			}
+			h3 {
+				display: none;
+			}
+			.offer {
+				display: none;
+			}
+		}
+		
+		.contact {
+			text-align: center;
+			.contact-info-box {
+				font-size: 30px;
+				.map {
+					display: none;
+				}
+				.buttons-contact {
+					justify-content: center;
+					button {
+						font-size: 30px;
+						width: 460px;
+						height: 150px;
+					}
+				}
+				i {
+					margin-right: 15px;
+					color: #009fe3;
+				}
+			}
+		}
+		footer{
+			height: 20vh;
+			font-size: 25px;
+
+		}
 }
+
